--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "seed": "node seed.js",
+    "seed:prod": "NODE_ENV=production node seed.js"
   },
   "keywords": [],
   "author": "",
